# pod240

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
assets/: README.md
scripts/: fix-icon-transparency.py  run-tauri-dev.mjs  third-party.json  vendor-release-assets.mjs
src/: app-menu.ts  audio-track-modal.ts  busy-overlay.ts  debug-session-log.ts  embedded-artwork-ui.ts  filename-metadata-hints.ts  main.ts  metadata-common.ts  metadata-flow.ts  metadata-gate.ts  metadata-modal.ts  modal-backdrop.ts  music-video-frame-ui.ts  musicbrainz-metadata.ts  open-external.ts  styles.css  tmdb-metadata.ts  tmdb-posters.ts  tv-episode-sort-id.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/atomicparsley/: README.txt
src-tauri/resources/ffmpeg/: README.txt
src-tauri/resources/handbrake/: README.txt
src-tauri/resources/presets/: Apple 240p30 (Olsro) (MacOS).json  Apple 240p30 (Olsro) (Windows).json
src-tauri/src/: audio_probe.rs  discord_webhook.rs  embedded_artwork.rs  ffmpeg_frame.rs  hidden_command.rs  lib.rs  main.rs  musicbrainz.rs  subtitle_sidecar.rs  tagging.rs  updates.rs
