[package]
name = "pod240"
version = "0.1.1"
description = "Pod240 — iPod 240p converter (Olsro preset)"
authors = ["you"]
edition = "2021"

[lib]
name = "pod240_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pod240"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tempfile = "3"
lofty = "0.24.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
